increase max blogs to 8

--- a/.github/workflows/blogs.yml
+++ b/.github/workflows/blogs.yml
@@ -13,4 +13,5 @@ jobs:
       - uses: JasonEtco/rss-to-readme@v1
         with:
           feed-url: https://dpnkr.in/rss/feed.xml
+          max: 8
           readme-section: feed
